fix: menu position on tablet

--- a/wp-content/themes/collectivewp/src/scss/templates/_landing-page.scss
+++ b/wp-content/themes/collectivewp/src/scss/templates/_landing-page.scss
@@ -22,6 +22,10 @@
 			@apply w-full h-48 pr-0;
 			margin-left: 150px;
 
+			@media (max-width: 1100px) and (min-width: 901px) {
+				margin-left: 50px;
+			}
+
 			#primary-menu {
 				@apply relative;
 
